# sapir-example

./: README.md
circuit/: Cargo.toml
circuit/src/: lib.rs  wasm.rs
frontend/: bun.lockb  next.config.mjs  package.json
frontend/app/: page.tsx
