[package]
name = "hello-sapir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-secq256k1 = "0.4.0"
sapir = { git = "https://github.com/personaelabs/sapir" }
